--- a/src/app.css
+++ b/src/app.css
@@ -1,3 +1,7 @@
 @import 'tailwindcss';
 @plugin '@tailwindcss/typography';
 @plugin "daisyui";
+
+.container-layout {
+	@apply mx-auto w-full max-w-7xl px-4;
+}
