--- a/src/app.css
+++ b/src/app.css
@@ -2,19 +2,10 @@
 @plugin '@tailwindcss/typography';
 @plugin "daisyui" {
 	themes:
-		emerald --default,
-		dark --prefersdark;
-}
-
-@plugin "daisyui/theme" {
-	name: 'dark';
-	default: false;
-	prefersdark: true;
-	--color-base-100: oklch(0.22 0.016 252.4);
-	--color-base-200: oklch(0.19 0.014 253.1);
-	--color-base-300: oklch(0.15 0.012 254.1);
+		cmyk --default,
+		business --prefersdark;
 }
 
 .container-layout {
-	@apply mx-auto w-full max-w-7xl px-4;
+	@apply mx-auto w-full max-w-6xl;
 }
